grammar.js
    translation_unit: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._directive,
      $._command,
      $._statement,
    ),

    define: $ => seq(
      $.define_insensitive,
      field('find', $.match),
      $.match,
    ),

    include: $ => seq(
      $.include_insensitive,
      $.identifier,
    ),

    function: $ => seq(
      field('name', $.identifier),
      '(',
      optional(
        repeat(
          seq(
            $._argument,
            ',',
          ),
        ),
      ),
      optional(
        $._argument,
      ),
      ')',
    ),

    _argument: $ => choice(
      $.identifier,
      $.number,
      $.string,
      $.variable,
    ),

    comment: $ => seq(
      '#',
      /.*/,
    ),

    match: $ => /[a-zA-Z0-9_.]+/,

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    number: $ => /\d+(\.\d+)?/,
